# BeeConnect

./: README.md
BeeApi/: .env  Cargo.toml
BeeApi/migrations/2023-02-15-172840_hello_world/: down.sql  up.sql
BeeApi/src/: main.rs  models.rs  ops.rs  schema.rs
be/: README.md
bee_api/: Cargo.toml
bee_api/migrations/2023-02-20-212745_measurement/: down.sql  up.sql
bee_api/src/: main.rs  models.rs  schema.rs
experimentation/bucket/: Cargo.toml
experimentation/bucket/src/: main.rs
experimentation/bucket_uuid/: Cargo.toml
experimentation/bucket_uuid/migrations/2023-03-04-001427_posts/: up.sql
experimentation/bucket_uuid/src/: main.rs  models.rs  schema.rs
experimentation/print_json/: .env  Cargo.toml
experimentation/print_json/src/: main.rs
experimentation/uuid/: .env  Cargo.toml
experimentation/uuid/migrations/2023-03-04-135507_post_uuid/: down.sql  up.sql
experimentation/uuid/src/: main.rs  models.rs  schema.rs
mcu/: README.md
