[package]
name = "BeeApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
actix-web = "^4"
actix-server = "2.1.1"
actix-http = "3.0.4"
actix-service = "2.0.2"

