[package]
name = "BeeApi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenvy = "0.15"
actix-web = "^4"
actix-server = "2.1.1"
actix-http = "3.0.4"
actix-service = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
serde_json = "1.0.93"
