[package]
name = "bee_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
  "extras",
] }
dotenvy = "0.15"
actix-web = "^4"
actix-server = "2.1.1"
actix-http = "3.0.4"
actix-service = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
serde_json = "1.0.93"
uuid = { version = "=1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
rust-s3 = "0.32.3"
aws-region = "0.25.1"
aws-creds = "0.34.0"
