[package]
name = "uuid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
uuid = { version = "=1.3.0", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
rust-s3 = "0.32.3"
diesel = { version = "2.0.3", features = [
  "postgres",
  "r2d2",
  "uuid",
  "chrono",
] }
actix-web = "^4"
actix-server = "2.1.1"
actix-http = "3.0.4"
actix-service = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1.0.69"
